# ysay

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.sh  config.toml  speech.txt
.github/workflows/: ci.yaml
src/: baidu_tts.rs  cli.rs  config.rs  lib.rs  main.rs  play.rs  tts.rs  utils.rs  yumo_tts.rs
