[package]
name = "say"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="ysay"
path="src/main.rs"
required-features = ["build-bin"] 

[lib]
name="say"
path="src/lib.rs"

[dependencies]
log = "0.4"

env_logger = {version = "0.9",optional = true}
structopt={version = "0.3",optional = true}

serde = { version = "1", features = ["derive"] }
rodio = "0.15"
hound = "3.4.0"
ureq = {version="2.4",features=["json","charset","native-certs","tls"]}

[features]
build-bin = ["env_logger","structopt"]