[package]
name = "say"
version = "0.3.1"
edition = "2021"
description = "speech with siliconflow speech api"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="ysay"
path="src/main.rs"
required-features = ["client"] 

[lib]
name="say"
path="src/lib.rs"

[dependencies]
log = "0.4"

env_logger = {version = "0.11",optional = true}
structopt={version = "0.3",optional = true}

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"

rodio = {version = "0.19"}
hound = "3.4.0"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "blocking",
    "stream",
], default-features = false }
toml = "0.8.19"
homedir = "0.3.4"
dirs = "5.0.1"


[features]
default=["client"]
client = ["env_logger","structopt"]
